compiler-core/src/parse/snapshots/rakun_core__parse__tests__capture_with_name.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 753
expression: "\npub fn main() {\n  add(_name, 1)\n}\n\nfn add(x, y) {\n  x + y\n}\n"
---
----- SOURCE CODE

pub fn main() {
  add(_name, 1)
}

fn add(x, y) {
  x + y
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:3:7
  │
3 │   add(_name, 1)
  │       ^^^^^ I was not expecting this

Found a name, expected one of: 
- An expression
- An underscore
